# codantic-ai

./: .env.example  .gitignore  LICENSE  README.md  agent_loop.py  codantic-ai.cast  main.py  mermaid.md  pyproject.toml  requirements.txt  system.txt
tools/: __init__.py  bash.py  call_functions.py  edit.py  execute_tool.py  glob.py  grep.py  ls.py  multiedit.py  read.py  todo.py  write.py
